# script_license_manager

./: .env.ci  .env.dev  .gitignore  Dockerfile.ci  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.ci.yml  docker-compose.dev.yml  manage.py  pyproject.toml  uwsgi.ini
.github/workflows/: lint_test.yml
script_license_manager/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: admin.py  filters.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
scripts/fixtures/scripts/: categories.yaml  groups.yaml  tags.yaml
scripts/migrations/: 0001_initial.py
scripts/services/: __init__.py  app_settings.py  encoding_service.py  license_key_service.py  repo_service.py  script_service.py
scripts/services/script_license_manager_service/: __init__.py  service.py  storage_adapters.py  structures.py
scripts/tests/e2e/: fixtures.py  test_generate_demo_encoded.py  test_generate_encoded.py  test_generate_plain.py  test_update_issued.py
